[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeth"
path = "src/main.rs"


[dependencies]
alloy-rlp = "0.3.4"
jsonrpsee = "0.23"
reth = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-evm = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-revm = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-exex = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-node-api = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-node-core = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-node-ethereum = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-primitives = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-provider = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-rpc = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-tracing = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-trie = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }

revm = { version = "12.0.0", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }

eyre = "0.6"
tokio = { version = "1.21", default-features = false }
futures = "0.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }

compat = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }

primitive-types = { version = "0.12.2", package = "primitive-types" }
serde_json = "1.0.94"
thiserror = "1.0"

tracing = "0.1.0"