[package]
name = "zeth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeth"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.81"
alloy-rlp = "0.3.4"
jsonrpsee = "0.24"
reth = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces" }
reth-evm = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-revm = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-exex = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-node-api = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-node-core = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-node-ethereum = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-primitives = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-provider = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-rpc = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-tracing = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }
reth-trie = { git = "https://github.com/fractal-zkp/reth.git", branch = "feat/tx-traces"  }

revm = { git = "https://github.com/fractal-zkp/revm.git", branch = "zeth", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }

eyre = "0.6"
tokio = { version = "1.21", default-features = false }
futures = "0.3"

compat = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
trace_decoder = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm.git", branch = "develop" }

primitive-types = { version = "0.12.2", package = "primitive-types" }
serde_json = "1.0.94"
thiserror = "1.0"

tracing = "0.1.0"

sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "postgres" ] }
